--- a/aula14ex/ex016/style.css
+++ b/aula14ex/ex016/style.css
@@ -1,6 +1,7 @@
 body {
-    background-color: blueviolet;
+    background-color: violet;
     font: normal 15pt Arial;
+    
 }
 
 header {
@@ -10,7 +11,7 @@ header {
 
 section {
     background-color: white;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 15px;
     width: 500px;
     margin: auto;
