--- a/aula14ex/ex017/style.css
+++ b/aula14ex/ex017/style.css
@@ -12,10 +12,14 @@ section {
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    width: 400px;
     margin: auto;
     box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.562);
 }
+select{
+    overflow: hidden;
+}
+
 
 footer {
     color: white;
